--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -6,10 +6,9 @@
 }
 
 /* .logo{
-    width: 5rem;
-    height: 5rem;
+    width: 15rem;
+    height: 6rem;
 } */
-
 
 nav a.nav-link {
     font-weight:500;
@@ -19,12 +18,6 @@ nav a.nav-link {
 
 nav ul li {
     text-transform: uppercase;
-    position: relative;
-    display: inline-block;
-    margin: 0;
-    padding: 16px 25px;
-    cursor: pointer;
-    font-weight:bold;
 }
 
 .navbar-nav> li > a {
@@ -34,23 +27,17 @@ nav ul li {
     border-top:0.1875 solid var( --primary-dark);
 }
 
-.container {
-    
+.navbar-brand {
+    max-width: 17.25rem;
     padding:2rem  !important;
     height: 6rem !important;
     margin-right: 0.75rem;
     margin-left: 0.75rem;
     border-top:0.1875 solid var( --primary-dark);
-    display: flex;
-    align-items: center; 
+   
     text-transform: uppercase;
     
 }
-/* .container {
-    display: flex; 
-    margin-left: 0.75rem;
-    
-} */
 
 .navbar-nav>li>a.active, .navbar-nav>li>a.active:focus{
     border-top:0.1874rem solid var(--primary-red);
@@ -58,8 +45,4 @@ nav ul li {
 .navbar-nav>li>a:hover {
     border-top:0.1874rem solid var(--primary-red);
 
-}
-
-.navbar-nav{
-    margin-right: 0 !important;
 }
