create overall layout of home page and work on styling

--- a/client/src/components/Description/style.css
+++ b/client/src/components/Description/style.css
@@ -9,12 +9,12 @@
     margin-top: 10rem;
     text-align: center;
 } */
-.container-1{
+.container-2{
     position:relative;
-    background: url(office1.jpg)no-repeat;
+    /* background: url(office1.jpg)no-repeat; */
     background-size: cover;
     background-position: center;
-    height: 50vh;
+    height: 120vh;
     padding: 20px;
     margin: 0 auto;
     margin-top: 5rem;
@@ -50,9 +50,12 @@ h2 {
     font-size:24px
         
         }
- .line-break{
+ /* .line-break{ */
             /* width: 200px; */
             /* margin:0 auto; */
             /* border-top: 1px solid black */
-        }
+        /* } */
 
+.logoName{
+    color:black
+}
