--- a/client/src/components/Contact/style1.css
+++ b/client/src/components/Contact/style1.css
@@ -3,7 +3,7 @@
     background: url(back4.png)no-repeat;
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    height: 50vh;
 
 }
 
@@ -30,11 +30,11 @@ h2 {
     
 }
 
-/* .contact-box{
+ .contact-box{
     width: 600px;
-    height: 600px; */
-    /* background-color: rgba(0,0,0,0.8); */
-    /* padding: 40px;
+    height: 600px; 
+     /* background-color: rgba(0,0,0,0.8);  */
+    padding: 40px;
     color: white;
     margin: 0 auto;
     margin-top: 100px;
@@ -42,8 +42,8 @@ h2 {
 }
 
 .social-icons{
-    font-size:5rem;
-    
+    font-size:3rem;
+    margin-top: 5rem;
     display: inline-block;
     
 }
@@ -56,11 +56,16 @@ h2 {
     color: rgb(86, 86, 243)
 }
 
-.line-break1{
+/* .line-break1{
     width: 350px;
     margin:0 auto;
-    border-top: 1px solid white
-}
-.fab {
-    margin-right: 4rem;
+    border-top: 1px solid white;
 } */
+.fab {
+    margin-right: 2rem;
+} 
+
+.line-break2{
+    width: 15rem;
+    border-top:1px solid white;
+}
