--- a/client/src/components/Description/style.css
+++ b/client/src/components/Description/style.css
@@ -18,21 +18,21 @@
     padding: 20px;
     margin: 0 auto;
     margin-top: 5rem;
-    text-align: center;
+    /* text-align: center; */
     /* width: 150vh; */
 }
 
 .about-Name {
     font-weight: 100;
     letter-spacing: 6;
-    font-size: 40px;
+    font-size: 3rem;
 color: Black
 }
 
 h2 {
     font-weight: 100;
     letter-spacing: 1;
-    font-size:36px
+    font-size:2rem;
 }
 
 
@@ -58,4 +58,10 @@ h2 {
 
 .logoName{
     color:black
+}
+
+.description{
+    color:black;
+    margin-top: 10rem;
+    font-size: 3rem;
 }
