--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,5 +1,5 @@
-.navbar-brand1{
-padding-top: 60px;
+/* .navbar-brand1{
+padding-top: 5rem;
 max-width: 17.25rem;
 padding:2rem  !important;
 height: 6rem !important;
@@ -9,5 +9,11 @@ border-top:0.1875 solid var( --primary-dark);
 align-items:center;
 text-transform: uppercase;
 font-weight: normal;
-}
+margin-top: 10rem;
 
+} */
+
+
+
+
+ 
