create login page and edit styling

--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -4,19 +4,30 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+  
     /* border: 1px solid black; */
-    border-radius: 5rem;
+    /* border-radius: 1rem; */
+    
     padding: 2rem;
-    margin-top: 2rem;
+    margin-top: 22.2rem;
     background-color: white;
+    padding-bottom: 30rem;
 } 
-
+.row{
+    border: 1px solid black;
+    margin-top:auto;
+   width: 60rem;
+   height: 60rem;
+   justify-self: center;
+   
+}
 input{
     width: 500%;
     height: 8%;
     border: 1px solid #dbdbdb;
     padding: 1rem;
+    /* margin-right: 3rem; */
     margin: 1rem;
     border-radius: 2rem;
     /* align-items: center; */
@@ -58,13 +69,14 @@ button{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     /* border: 1px solid black; */
     border-radius: 5rem;
     padding: 2rem;
-    margin-top: 2rem;
-    margin-left:7rem;
-    /* margin-bottom: 10rem; */
+    margin-top: 21rem;
+    /* margin-left:7rem; */
+    padding-bottom: 30rem;
+    
     background-color: white;
 }
 
@@ -73,8 +85,8 @@ button{
     /* margin-top: 3rem; */
 }
 
-.linebreak{
+/* .linebreak{
     width: 10rem;
     border-top:1px solid black;
     margin-bottom: 3rem;
-}
+} */
