--- a/client/src/components/Header/style1.css
+++ b/client/src/components/Header/style1.css
@@ -1,13 +1,13 @@
-.header-wrapper {
+.header-wrapper1 {
     position:relative;
-    background: url(back4.png)no-repeat;
+    background: url(back4.png);
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    height: 40vh;
 
 }
 
-.main-info{
+.main-info1{
     display: flex;
     flex-direction: column;
     justify-content: center;
