--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -90,3 +90,11 @@ button{
     border-top:1px solid black;
     margin-bottom: 3rem;
 } */
+
+/* .logo{
+    background: url(Leads\ Force\ Logo.png) center;
+    width: 100rem;
+    margin-right:0;
+    margin-left: 50rem;
+    display:block;
+} */
