Git pulled from main.

--- a/client/src/components/About/style.css
+++ b/client/src/components/About/style.css
@@ -17,7 +17,7 @@
     height: 50vh;
     padding: 20px;
     margin: 0 auto;
-    margin-top: 5rem;
+    margin-top: 4rem;
     text-align: center;
     /* width: 150vh; */
 }
@@ -55,4 +55,11 @@ h2 {
             /* margin:0 auto; */
             /* border-top: 1px solid black */
         }
+
+ .Lead-Header{
+     color:black;
+     margin-top: 1rem;
+     text-transform: uppercase;
+     
+ }
 
