--- a/client/src/components/Contact/style2.css
+++ b/client/src/components/Contact/style2.css
@@ -3,7 +3,8 @@
     background: url(back4.png)no-repeat;
     background-size: cover;
     background-position: center;
-    height: 50vh;
+    height: 40vh;
+    margin-bottom: 10rem;
 
 }
 
