edit styling of footer

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -13,7 +13,26 @@ margin-top: 10rem;
 
 } */
 
+.main-footer {
+    color: white;
+    background-color: dodgerblue;
+    padding-top: 3em;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    /* margin-bottom: auto;  */
+    display: flex;
+    flex-direction: column;
+    
+  }
 
+  .container{
+      height:10rem
+  }
+  
+
+
+ 
 
 
  
