edit styling of table

--- a/client/src/components/Table/style.css
+++ b/client/src/components/Table/style.css
@@ -2,3 +2,12 @@
 margin-bottom: 10rem;
    
 }
+
+.btn3{
+    width:fit-content;
+    
+    /* margin-right:1rem; */
+    /* margin-left:auto; */
+    /* margin: auto; */
+   
+}
