--- a/client/src/components/Contact/style2.css
+++ b/client/src/components/Contact/style2.css
@@ -70,3 +70,21 @@ h2 {
     width: 15rem;
     border-top:1px solid white;
 }
+
+/* .main-footer {
+    color: white;
+    background-color: dodgerblue;
+    padding-top: 3em;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    /* margin-bottom: auto;  */
+    /* display: flex; */
+    /* flex-direction: column; */
+    
+  /* } */
+
+  /* .container{
+      height:10rem
+  } */
+   
