--- a/client/src/components/Description/style.css
+++ b/client/src/components/Description/style.css
@@ -14,7 +14,7 @@
     /* background: url(office1.jpg)no-repeat; */
     background-size: cover;
     background-position: center;
-    height: 120vh;
+    /* height: 120vh; */
     padding: 20px;
     margin: 0 auto;
     margin-top: 5rem;
