--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -13,15 +13,15 @@ margin-top: 10rem;
 
 } */
 
-.main-footer {
+/* .main-footer {
     color: white;
     background-color: dodgerblue;
     padding-top: 3em;
     position: relative;
     bottom: 0;
-    width: 100%;
+    width: 100%; */
     /* margin-bottom: auto;  */
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     
   }
@@ -29,10 +29,17 @@ margin-top: 10rem;
   .container{
       height:10rem
   }
-  
+   */
 
-
- 
+   /* .main-footer {
+    color: white;
+    background-color:dodgerblue;
+    padding-top: 3em;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+  }
+ */
 
 
  
