--- a/client/src/components/About/style.css
+++ b/client/src/components/About/style.css
@@ -14,8 +14,9 @@
     background: url(office1.jpg)no-repeat;
     background-size: cover;
     background-position: center;
-    margin-top: 5rem;
-    /* height: 50vh; */
+    margin-top: 3rem;
+    height: 50vh;
+
     /* padding: 20px; */
     /* margin: 0 auto; */
     /* margin-top: 4rem; */
@@ -24,33 +25,36 @@
 }
 
 .about-Name {
-    font-weight: 100;
+    /* font-weight: 1; */
     letter-spacing: 6;
-    font-size: 40px;
-color: Black
+    font-size: 4rem;
+    color:rgb(255, 255, 255)
+/* color: black */
+
 }
 
-h2 {
+
+/* h2 {
     font-weight: 100;
     letter-spacing: 1;
     font-size:36px
-}
+} */
 
 
-.profile-pic {
+/* .profile-pic { */
     /* border-radius:50%; */
-    height: 13rem;
-    width: 13rem;
+    /* height: 13rem;
+    width: 13rem; */
     /* border-style: solid; */
     /* border-color: white; */
     /* border-width: 10px;
     border-radius:60%; */
-    }
+    /* } */
 
- p{
+ /* p{
     font-size:24px
         
-        }
+        } */
  .line-break{
             /* width: 200px; */
             /* margin:0 auto; */
@@ -58,7 +62,7 @@ h2 {
         }
 
  .Lead-Header{
-     color:black;
+     color: white;
      margin-top: 1rem;
      text-transform: uppercase;
      
