--- a/client/src/components/Contact/style2.css
+++ b/client/src/components/Contact/style2.css
@@ -1,10 +1,12 @@
-.header-wrapper {
+#contact{
+    margin-top:20rem;
     position:relative;
     background: url(back4.png)no-repeat;
     background-size: cover;
     background-position: center;
-    height: 40vh;
-    margin-bottom: 10rem;
+    height: 50vh;
+    width:100rem;
+   
 
 }
 
@@ -31,17 +33,7 @@ h2 {
     
 }
 
- .contact-box{
-    width: 600px;
-    height: 600px; 
-     /* background-color: rgba(0,0,0,0.8);  */
-    padding: 40px;
-    color: white;
-    margin: 0 auto;
-    margin-top: 100px;
-    text-align: center;
-}
-
+ 
 .social-icons{
     font-size:3rem;
     margin-top: 5rem;
