--- a/client/src/components/Description/style.css
+++ b/client/src/components/Description/style.css
@@ -9,59 +9,88 @@
     margin-top: 10rem;
     text-align: center;
 } */
-.container-2{
-    position:relative;
-    /* background: url(office1.jpg)no-repeat; */
-    background-size: cover;
-    background-position: center;
-    /* height: 120vh; */
-    padding: 20px;
-    margin: 0 auto;
+.jumbotron{
     margin-top: 5rem;
+    text-align:center;
+   
+    /* position:relative; */
+    /* background: url(office1.jpg)no-repeat; */
+    /* background-size: cover;
+    background-position: center; */
+    /* height: 120vh; */
+    /* padding: 20px;
+    margin: 0 auto;
+    margin-top: 5rem; */
     /* text-align: center; */
     /* width: 150vh; */
 }
-
+/* 
 .about-Name {
     font-weight: 100;
     letter-spacing: 6;
     font-size: 3rem;
 color: Black
-}
+} */
 
-h2 {
+/* h2 {
     font-weight: 100;
     letter-spacing: 1;
     font-size:2rem;
-}
+} */
 
 
-.profile-pic {
+/* .profile-pic { */
     /* border-radius:50%; */
-    height: 13rem;
-    width: 13rem;
+    /* height: 13rem;
+    width: 13rem; */
     /* border-style: solid; */
     /* border-color: white; */
     /* border-width: 10px;
     border-radius:60%; */
-    }
-
+    /* } */
+.question1{
+    margin-bottom: 10rem;
+    
+    
+}
  p{
-    font-size:24px
-        
+    font-size:24px;
+    text-align: left;
+   
         }
+ .question2{
+     margin-bottom:10rem;
+ }
+ .question-1{
+    color: black;
+    font-size: 3rem;
+ }
+ .question-2{
+    color: black;
+    font-size: 3rem;
+ }
+ .question-3{
+    color: black;
+    font-size: 3rem;
+ }
  /* .line-break{ */
             /* width: 200px; */
             /* margin:0 auto; */
             /* border-top: 1px solid black */
         /* } */
 
-.logoName{
+/* .logoName{
     color:black
-}
+} */
 
-.description{
+/* .description1{
     color:black;
     margin-top: 10rem;
     font-size: 3rem;
-}
+} */
+
+/* .description2{
+    color:black;
+    margin-top: 10rem;
+    font-size: 3rem;
+} */
