--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -9,7 +9,7 @@
   /* flex-direction: column; */
   justify-content: center;
   align-items: center;
-  height: 45vh;
+  height: 30vh;
   /* margin-top:10rem; */
 }
 
@@ -54,8 +54,7 @@
 }
 
 .footer-links {
-  width: 100%;
-  max-width: 1000px;
+  width: 50vw;
   display: flex;
   justify-content: center;
   margin-top:0rem;
