--- a/client/src/components/Description/style.css
+++ b/client/src/components/Description/style.css
@@ -1,31 +1,22 @@
 .jumbotron{
-    /* margin-top: 1rem; */
-    text-align:center;
-    background: url(grey.jpg)no-repeat;
-    background-size: cover;
-    background-position: center;
+  text-align:center;
+  background-size: cover;
+  background-position: center;
 }
 
-.question1{
-    margin-bottom: 10rem;
-
+.question1,
+.question2{
+  margin-bottom: 10rem;
 }
- p{
-    font-size:24px;
-    text-align: left;
-        }
- .question2{
-     margin-bottom:10rem;
- }
- .question-1{
-    color: black;
-    font-size: 3rem;
- }
- .question-2{
-    color: black;
-    font-size: 3rem;
- }
- .question-3{
-    color: black;
-    font-size: 3rem;
+
+p{
+  font-size:24px;
+  text-align: left;
+}
+
+.question-1,
+.question-2,
+.question-3{
+  color: black;
+  font-size: 3rem;
  }
