--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -2,39 +2,8 @@
    margin-top: 5rem;
  }
 
- .footer-container {
-  background-color: dodgerblue;
-  /* padding: 4rem 0 2rem 0; */
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: center;
-  align-items: center;
-  height: 30vh;
-  /* margin-top:10rem; */
-}
-
-.footer-subscription {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-/* margin-top: 1rem; */
-  margin-bottom: 24px;
-  padding: 24px;
-  color: #fff;
-}
-
-.footer-subscription > p {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
-}
-
-.footer-subscription-heading {
-  margin-top: 8rem;
-  margin-left: 15rem;
-  /* margin-bottom: 24px; */
-  font-size: 24px;
+ #footerContainer {
+  width: 100%;
 }
 
 .footer-subscription-text {
@@ -57,7 +26,7 @@
   width: 50vw;
   display: flex;
   justify-content: center;
-  margin-top:0rem;
+  margin-top: 0rem;
 }
 
 .footer-link-wrapper {
@@ -65,17 +34,17 @@
   
 }
 
+.card-title {
+  font-size: 25px;
+}
+
 .footer-link-items {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  /* margin: 16px; */
+   margin: 5px; 
   text-align: left;
   width: 160px;
   box-sizing: border-box;
   margin-top: 1rem;
-  margin-bottom:5rem;
-  margin-left: 6.5rem;
+  font-size: 21px;
 }
 
 .footer-link-items h2 {
@@ -147,10 +116,9 @@
 
 .website-rights {
   color: #fff;
-  font-size: 2rem;
-  /* margin-bottom: 16px; */
+  font-size: 18px;
 }
-
+/* 
 @media screen and (max-width: 820px) {
   .footer-links {
     padding-top: 2rem;
@@ -176,4 +144,4 @@
 
 @media screen and (max-width: 768px) {
 
-}
+}  */
