--- a/client/src/components/Description/style.css
+++ b/client/src/components/Description/style.css
@@ -2,16 +2,22 @@
   text-align:center;
   background-size: cover;
   background-position: center;
+  background: url(grey.jpg)no-repeat;
+  background-size: cover;
+  background-position: center;
+  height:100vh
 }
 
 .question1,
 .question2{
+  
   margin-bottom: 10rem;
 }
 
 p{
   font-size:24px;
   text-align: left;
+  margin-bottom: 5rem;
 }
 
 .question-1,
@@ -20,3 +26,5 @@ p{
   color: black;
   font-size: 3rem;
  }
+
+ 
