--- a/client/src/components/Header/style1.css
+++ b/client/src/components/Header/style1.css
@@ -5,11 +5,12 @@
     background-position: center;
     /* padding-top: 5%; */
     padding-bottom: 5%;
-color:white;
+/* color:black; */
 margin-top:0rem;
     height: 45vh;
 
 }
 .header-welcome{
     font-size: 4rem;
+    color:black
 }
